[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.49"
enum-map = "1.1.1"
itertools = "0.10.3"
num-bigint = "0.4.3"
rayon = "1.5.1"
regex = "1.5.4"
smallvec = "1.7.0"
